2021-05-11  Cameron McCormack  <heycam@apple.com>

        Include reasons for compositing in showLayerTree output
        https://bugs.webkit.org/show_bug.cgi?id=225640

        Reviewed by Simon Fraser.

        * fast/harness/render-tree-as-text-options-expected.txt:

2021-05-11  Toshio Ogasawara  <toshio.ogasawara@access-company.com>

        [MSE] QuotaExceededError Exception not thrown even if the sum of totalTrackBufferSize and appendBuffer size exceeds maximumBufferSize.
        https://bugs.webkit.org/show_bug.cgi?id=225630

        Reviewed by Eric Carlson.

        * media/media-source/media-source-append-buffer-full-quota-exceeded-error-expected.txt: Added.
        * media/media-source/media-source-append-buffer-full-quota-exceeded-error.html: Added.

2021-05-11  Robert Jenner  <jenner@apple.com>

        [ BigSur wk2 arm64 ] editing/selection/move-by-character-brute-force.html (layout-test) is a flaky timeout
        https://bugs.webkit.org/show_bug.cgi?id=225664

        Unreviewed test gardening.

        Updating expectations to Pass Timeout for BigSur wk2 arm64.

        * platform/mac-wk2/TestExpectations:

2021-05-11  Robert Jenner  <jenner@apple.com>

        [ BigSur Release wk2 arm64 ] http/tests/appcache/fail-on-update-2.html (layout-test) is a flaky timeout
        https://bugs.webkit.org/show_bug.cgi?id=225665

        Unreviewed test gardening.

        Updating test expectations to Pass Timeout for BigSur Release wk2 arm64.

        * platform/mac-wk2/TestExpectations:

2021-05-11  Robert Jenner  <jenner@apple.com>

        [ BigSur wk2 arm64 ] http/tests/cache/disk-cache/redirect-chain-limits.html (layout-test) is a flaky timeout
        Nhttps://bugs.webkit.org/show_bug.cgi?id=225666

        Unreviewed test gardening.

        Updating expectations to Pass timeout.

        * platform/mac-wk2/TestExpectations:

2021-05-11  Ryan Haddad  <ryanhaddad@apple.com>
