@@ -87,33 +87,29 @@ promise_test(async (test) => {
 }, "Web Audio should work with mock audio destination");
 
 var context;
-async function checkForNoise(stream, counter)
+async function checkForNoise(stream, expectedHeardNoise, counter)
 {
     if (!counter)
         counter = 1;
     else if (++counter > 50)
         return Promise.resolve(false);
     results = await analyseAudio(stream, 100, context);
-    if (results.heardNoise)
+    if (results.heardNoise == expectedHeardNoise)
         return Promise.resolve(true);
-    var results = await checkForNoise(stream, counter);
+    var results = await checkForNoise(stream, expectedHeardNoise, counter);
     return results;
 }
 
 promise_test(async (test) => {
     context = new AudioContext();
-    if (window.testRunner)
-        testRunner.setUserMediaPermission(true);
 
     let stream = await navigator.mediaDevices.getUserMedia({audio: { echoCancellation : true}});
     assert_true(stream.getAudioTracks()[0].getSettings().echoCancellation);
-    const results = await analyseAudio(stream, 100, context);
-    assert_false(results.heardNoise, "should not hear noise");
+    assert_true(await checkForNoise(stream, false), "should not hear noise");
 
     stream = await navigator.mediaDevices.getUserMedia({audio: { echoCancellation : false}});
     assert_false(stream.getAudioTracks()[0].getSettings().echoCancellation, "settings is ok");
-    const heardNoise = await checkForNoise(stream);
-    assert_true(heardNoise, "heard noise");
+    assert_true(await checkForNoise(stream, true), "heard noise");
 
     context.close();
     context = null;
