@@ -1,3 +1,14 @@
+2021-05-12  Youenn Fablet  <youenn@apple.com>
+
+        fast/mediastream/getUserMedia-webaudio.html is flaky
+        https://bugs.webkit.org/show_bug.cgi?id=225655
+        <rdar://74158395>
+
+        Reviewed by Eric Carlson.
+
+        * fast/mediastream/getUserMedia-webaudio.html:
+        Retry several time instead of just once when detecting no noise to improve robustness.
+
 2021-05-11  Cameron McCormack  <heycam@apple.com>
 
         Include reasons for compositing in showLayerTree output
